--- a/_articles/black-eyed-pea/al.ap.specimen.bm000589657.yaml
+++ b/_articles/black-eyed-pea/al.ap.specimen.bm000589657.yaml
@@ -1,4 +1,4 @@
-label: "Filed as Dolichos unguiculatus L. [family FABACEAE: FABOIDEAE]""
+label: "Filed as Dolichos unguiculatus L. [family FABACEAE: FABOIDEAE]"
 summary: An herbarium specimen of Vigna unguiculata made by Sir Hans Sloane in Jamaica, now housed at the Natural History Museum, London.
 requiredStatement:
   attribution: JSTOR Global Plants, courtesy of the Natural History Museum, London.
