Update yaml format

--- a/_articles/black-eyed-pea/al.ap.specimen.bm000589657.yaml
+++ b/_articles/black-eyed-pea/al.ap.specimen.bm000589657.yaml
@@ -3,4 +3,4 @@ summary: An herbarium specimen of Vigna unguiculata made by Sir Hans Sloane in J
 requiredStatement:
   attribution: JSTOR Global Plants, courtesy of the Natural History Museum, London.
   url: https://plants.jstor.org/stable/10.5555/al.ap.specimen.bm000589657
-reuseRights: http://rightsstatements.org/vocab/InC/1.0/
+rights: http://rightsstatements.org/vocab/InC/1.0/
