Update yaml template

--- a/_articles/black-eyed-pea/al.ap.specimen.bm000589657.yaml
+++ b/_articles/black-eyed-pea/al.ap.specimen.bm000589657.yaml
@@ -2,5 +2,5 @@ label: "Filed as Dolichos unguiculatus L. [family FABACEAE: FABOIDEAE]"
 summary: An herbarium specimen of Vigna unguiculata made by Sir Hans Sloane in Jamaica, now housed at the Natural History Museum, London.
 requiredStatement:
   attribution: JSTOR Global Plants, courtesy of the Natural History Museum, London.
-  url: https://plants.jstor.org/stable/10.5555/al.ap.specimen.bm000589657
 rights: http://rightsstatements.org/vocab/InC/1.0/
+source: https://plants.jstor.org/stable/10.5555/al.ap.specimen.bm000589657
